Hero sections have been added to all pages except the homepage

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,6 +71,14 @@ main {
     background: url('../images/key-of-life.svg') bottom right no-repeat;
 }
 
+.hero-section.contact .container {
+    background: url('../images/two-dots.svg') bottom right no-repeat;
+}
+
+.hero-section.services .container {
+    background: url('../images/services.svg') bottom right no-repeat;
+}
+
 .text-custom {
     color: #5C7A30;
 }
