--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -195,6 +195,58 @@ p, a, li, .lead {
     display: inline-block;
 }
 
+/* Services list - Services */
+
+ul.service-list {
+    list-style: none;
+    margin-top: 30px;
+    color: #fff;
+}
+
+ul.service-list li.service-item {
+    margin-bottom: 30px;
+    padding: 30px;
+    border: 1px solid #eee;
+    border-radius: 120px;
+    background-size: cover;
+}
+
+ul.service-list li.service-item.teal { background: url('../images/backgrounds/teal.png') center center no-repeat; background-size: cover; }
+ul.service-list li.service-item.olive { background: url('../images/backgrounds/olive.png') center center no-repeat; background-size: cover;}
+ul.service-list li.service-item.bronze { background: url('../images/backgrounds/bronze.png') center center no-repeat; background-size: cover;}
+ul.service-list li.service-item.crimson { background: url('../images/backgrounds/crimson.png') center center no-repeat; background-size: cover;}
+ul.service-list li.service-item.violet { background: url('../images/backgrounds/violet.png') center center no-repeat; background-size: cover;}
+ul.service-list li.service-item.magenta { background: url('../images/backgrounds/magenta.png') center center no-repeat; background-size: cover;}
+
+ul.service-list li.service-item .service-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 175px;  /* Adjust width and height as needed */
+    height: 175px;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional shadow */
+}
+ul.service-list li.service-item .service-icon img {
+    width: 75px;
+    height: 75px;
+}
+
+ul.service-list li.service-item h3 {
+    font-weight: 700;
+    font-size: 36px;
+    margin-bottom: 20px;
+    padding-top: 25px;
+}
+
+ul.service-list li.service-item p {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 0;
+}
+
 /* Footer Styles */
 footer {
     background-color: #fff; /* White background */
