--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -308,17 +308,91 @@ footer p {
     color: #000;
 }
 
+/* Media Queries for Mobile View */
 @media (max-width: 767.98px) {
+    .hero-section .container {
+        padding: 100px 20px; /* Adjust padding for mobile view */
+    }
+
+    .navbar-nav .nav-link {
+        padding: 10px 0 !important;
+        font-size: 12px;
+        margin: 0 10px;
+    }
+
+    .navbar-nav .nav-item.login .nav-link {
+        padding: 5px 15px !important;
+        margin: 5px 0 5px 5px;
+    }
+
+    .fact {
+        margin-bottom: 30px;
+    }
+
+    .fact .circle {
+        width: 100%;
+        padding: 30px 0;
+    }
+
+    .service-item {
+        text-align: center;
+    }
+
+    ul.service-list li.service-item h3 {
+        font-size: 24px;
+        padding-top: 10px;
+    }
+
+    ul.service-list li.service-item p {
+        font-size: 16px;
+        line-height: 22px;
+    }
+
     footer .container {
         flex-direction: column;
         text-align: center;
     }
 
     footer .social-icons {
-        margin-bottom: 15px;
+        margin-bottom: 20px;
     }
 
-    .footer-logo {
-        margin-top: 15px;
+    .contact-info h4 {
+        font-size: 18px;
+        margin-top: 20px;
+    }
+
+    .contact-info p {
+        font-size: 14px;
+    }
+
+    .hero-section.home .container p {
+        margin-bottom: 20px;
+    }
+
+    .hero-section.home a.btn {
+        padding: 8px 20px;
+        font-size: 14px;
+    }
+
+    /* Service Icons for Mobile */
+    ul.service-list li.service-item .service-icon {
+        width: 125px; /* Reduce icon size */
+        height: 125px;
+        margin: 0 auto;
+    }
+
+    ul.service-list li.service-item .service-icon img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .hero-section.about .container,
+    .hero-section.contact .container,
+    .hero-section.services .container,
+    .hero-section.home .container {
+        background: none;
     }
 }
+
+
